--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-react-css-modules": "^3.3.1",
     "babel-plugin-styled-components": "^1.2.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
@@ -56,6 +57,7 @@
     "postcss-load-config": "^1.2.0",
     "postcss-loader": "^2.0.6",
     "postcss-plugin": "^1.0.0",
+    "react-css-modules": "^4.7.1",
     "react-test-renderer": "^16.0.0",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
