--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "dependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-router-dom": "^4.2.2"
   }
 }
