--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "description": "just simple RWD page",
   "main": "./src/index.js",
   "scripts": {
-    "test": " jest --no-cache",
+    "test": " jest",
     "build": "webpack --env production",
     "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --content-base dist/ --env development\"  "
   },
   "jest": {
-    "transform": {
-      "\\.js$": "babel-jest"
+    "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
+    "setupFiles": [
+      "raf/polyfill"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js"
     },
+    "unmockedModulePathPatterns": [
+      "node_modules/react/",
+      "node_modules/enzyme/"
+    ],
     "collectCoverageFrom": [
       "./src/components/**/test/*.jsx",
       "./src/components/*.test.jsx",
@@ -37,15 +46,20 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-dynamic-import-node": "^1.1.0",
     "babel-plugin-react-css-modules": "^3.3.1",
     "babel-plugin-styled-components": "^1.2.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-jest": "^21.2.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "html-loader": "^0.5.1",
@@ -69,6 +83,7 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "dependencies": {
+    "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-fa": "^5.0.0",
     "react-router-dom": "^4.2.2"
