--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "jest",
-    "testing":"nodemon --watch  -e jsx  --exec \"npm  test \" ",
+    "testing": "nodemon --watch  -e jsx  --exec \"npm  test \" ",
     "build": "webpack --env production",
     "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --content-base dist/ --env development\"  "
   },
@@ -65,6 +65,7 @@
     "file-loader": "^1.1.4",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
     "jest-enzyme": "^4.0.0",
     "node-sass": "^4.5.3",
