--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "jest",
-    "testing":"nodemon --watch  -e jsx  --exec \"npm  test \" ",
+    "testing": "nodemon --watch  -e jsx  --exec \"npm  test \" ",
     "build": "webpack --env production",
     "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --content-base dist/ --env development\"  "
   },
@@ -50,6 +50,7 @@
     "babel-plugin-dynamic-import-node": "^1.1.0",
     "babel-plugin-react-css-modules": "^3.3.1",
     "babel-plugin-styled-components": "^1.2.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
