--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-fa": "^5.0.0",
