--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "compression-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
@@ -81,6 +82,7 @@
     "sass-resources-loader": "^1.3.1",
     "style-loader": "^0.18.2",
     "styled-components": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
@@ -88,6 +90,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "google-map-react": "^0.25.0",
     "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-fa": "^5.0.0",
